--- a/scss/style.css
+++ b/scss/style.css
@@ -634,4 +634,157 @@ main {
   text-transform: uppercase;
   cursor: pointer;
 }
+
+.influencer-words {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 6rem;
+}
+
+.words-text-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.words-text-section .some-words span {
+  font-size: clamp(25px, 3vw, 40px);
+  display: inline-block;
+  letter-spacing: 8px;
+  color: #1a1a1a;
+  text-transform: uppercase;
+  font-family: Optima;
+  font-weight: normal;
+  padding-left: 0;
+}
+
+.words-text-section .words-sub-heading {
+  font-weight: normal;
+  font-size: 16px;
+  text-align: center;
+  letter-spacing: 4px;
+  color: #5E6E85;
+  margin: 0.5rem 0;
+  text-transform: uppercase;
+}
+
+.influencer-word-container {
+  width: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 3rem;
+}
+
+.influencer-word-container .influencer-names-container {
+  width: 100%;
+  margin-left: 1rem;
+}
+
+.influencer-word-container .influencer-names-container ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style-type: none;
+  margin-bottom: 2rem;
+}
+
+.influencer-word-container .influencer-names-container ul li {
+  font-size: 12px;
+  letter-spacing: 3px;
+  color: #8DA2BB;
+  /* color: #FFD88F; */
+  border: 0;
+  width: 12rem;
+  background: transparent;
+  text-transform: uppercase;
+  cursor: pointer;
+  margin: 0 20px;
+}
+
+.influencer-word-container .influencer-pic-desc {
+  width: 100%;
+  padding: 5rem  8rem;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid #ffcc70;
+}
+
+.influencer-word-container .influencer-pic-desc .influencer-img-container {
+  width: 75%;
+  overflow: hidden;
+  margin-left: 1rem;
+}
+
+.influencer-word-container .influencer-pic-desc .influencer-img-container img {
+  width: 85%;
+  height: 85%;
+}
+
+.influencer-word-container .influencer-pic-desc .influencer-desc {
+  width: 70%;
+}
+
+.influencer-word-container .influencer-pic-desc .influencer-desc .influencer-desc-heading {
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #1a1a1a;
+  letter-spacing: 4px;
+  margin-bottom: 1rem;
+}
+
+.influencer-word-container .influencer-pic-desc .influencer-desc .influencer-desc-detail {
+  text-align: left;
+  letter-spacing: 0.32px;
+  color: #5e6e85;
+  opacity: 1;
+  font-size: 16px;
+  margin: 1rem 0;
+  line-height: 2;
+}
 /*# sourceMappingURL=style.css.map */
