--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -7,3 +7,15 @@
 body{
     font-family: 'Montserrat', sans-serif;
 }
+
+html, body{
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+
+.selection-color {
+    color: #FFD88F !important;
+}
