--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -480,3 +480,47 @@
         }
     }
 }
+
+
+
+// ================================
+
+.light-heading{
+    font-size: clamp(25px,3vw,40px);
+    display: inline-block;
+    letter-spacing: 8px;
+    color: #1a1a1a;
+    text-transform: uppercase;
+    font-family: 'Montserrat', 'belleza';
+    font-weight: 100;
+    padding-left: 1rem;
+}
+
+.technologies-work-with{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 8rem;
+
+    .tech-icons-container{
+        width: 68%;
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+
+
+        .tech-icon{
+            margin: 6.5%;
+
+            img{
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+
+}
