--- a/scss/style.css
+++ b/scss/style.css
@@ -799,4 +799,146 @@ main {
   margin: 1rem 0;
   line-height: 2;
 }
+
+.light-heading {
+  font-size: clamp(25px, 3vw, 40px);
+  display: inline-block;
+  letter-spacing: 8px;
+  color: #1a1a1a;
+  text-transform: uppercase;
+  font-family: 'Montserrat', 'belleza';
+  font-weight: 100;
+  padding-left: 1rem;
+}
+
+.technologies-work-with {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 8rem;
+}
+
+.technologies-work-with .tech-icons-container {
+  width: 68%;
+  margin-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.technologies-work-with .tech-icons-container .tech-icon {
+  margin: 6.5%;
+}
+
+.technologies-work-with .tech-icons-container .tech-icon img {
+  width: 100%;
+  height: 100%;
+}
+
+footer {
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: black;
+  color: white;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+footer .footer-container {
+  width: 50%;
+  padding: 3rem 2rem;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer .footer-container .footer-site-logo {
+  width: 70%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .footer-container .footer-site-logo h2 {
+  padding-left: 0.5rem;
+}
+
+footer .footer-container .footer-site-logo img {
+  width: 10%;
+  height: 10%;
+  margin-right: 1rem;
+}
+
+footer .footer-container .footer-links {
+  padding: 1rem;
+  width: 100%;
+}
+
+footer .footer-container .footer-links ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  list-style-type: none;
+}
+
+footer .footer-container .footer-links ul li {
+  text-align: left;
+  letter-spacing: 2.8px;
+  color: #fcfcfc;
+  padding: 0 1rem;
+  font-size: 14px;
+  text-transform: uppercase;
+}
 /*# sourceMappingURL=style.css.map */
