contact us page added

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -51,6 +51,16 @@ footer {
                     padding: 0 1rem;
                     font-size: 14px;
                     text-transform: uppercase;
+
+                    a{
+                        text-align: left;
+                        letter-spacing: 2.8px;
+                        color: #fcfcfc;
+                        padding: 0 1rem;
+                        font-size: 14px;
+                        text-transform: uppercase;
+                        text-decoration: none;
+                    }
                 }
             }
         }
