--- a/scss/_contact-wrapper.scss
+++ b/scss/_contact-wrapper.scss
@@ -43,6 +43,8 @@
             width: 100%;
             color: gray;
             margin-top: 5em;
+            border: 1px solid gray;
+            padding: 2em;
 
             .contact-us-company-name{
                 width: 100%;
