--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -24,15 +24,25 @@ footer {
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            @media screen and (max-width: $bp-mobile) {
+                width: 100%;
+            }
 
             h2 {
                 padding-left: 0.5rem;
+
+                @media screen and (max-width: $bp-mobile) {
+                    font-size: 80%;
+                }
             }
 
             img {
                 width: 10%;
                 height: 10%;
                 margin-right: 1rem;
+                @media screen and (max-width: $bp-mobile) {
+                    font-size: 30%;
+                }
             }
         }
 
@@ -43,6 +53,7 @@ footer {
                 display: flex;
                 justify-content: space-around;
                 list-style-type: none;
+                width: 100%;
 
                 li {
                     text-align: left;
@@ -53,6 +64,7 @@ footer {
                     text-transform: uppercase;
 
                     a{
+                        width: 100%;
                         text-align: left;
                         letter-spacing: 2.8px;
                         color: #fcfcfc;
@@ -60,6 +72,11 @@ footer {
                         font-size: 14px;
                         text-transform: uppercase;
                         text-decoration: none;
+                        @media screen and (max-width: $bp-mobile) {
+                            font-size: 14px;
+                            letter-spacing: 1;
+                            min-width: 100%;
+                        }
                     }
                 }
             }
