--- a/scss/style.css
+++ b/scss/style.css
@@ -43,6 +43,15 @@ nav {
   font-weight: 100;
 }
 
+@media screen and (max-width: 375px) {
+  nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
 nav .nav-logo {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -66,6 +75,12 @@ nav .nav-items {
   width: 35%;
 }
 
+@media screen and (max-width: 375px) {
+  nav .nav-items {
+    width: 100%;
+  }
+}
+
 nav .nav-items ul {
   font-size: 20px;
   text-transform: uppercase;
@@ -76,6 +91,12 @@ nav .nav-items ul {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+@media screen and (max-width: 375px) {
+  nav .nav-items ul {
+    font-size: 18px;
+  }
 }
 
 nav .nav-quote {
@@ -236,8 +257,27 @@ main {
           justify-content: space-between;
 }
 
+@media screen and (max-width: 375px) {
+  .site-sections .section {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    min-width: 100%;
+  }
+}
+
 .site-sections .section .img-contianer {
   width: 50%;
+}
+
+@media screen and (max-width: 375px) {
+  .site-sections .section .img-contianer {
+    min-width: 80%;
+  }
 }
 
 .site-sections .section .img-contianer img {
@@ -245,9 +285,21 @@ main {
   height: 96%;
 }
 
+@media screen and (max-width: 375px) {
+  .site-sections .section .img-contianer img {
+    max-width: 100%;
+  }
+}
+
 .site-sections .section .text-container {
   width: 50%;
   padding: 5% 5%;
+}
+
+@media screen and (max-width: 375px) {
+  .site-sections .section .text-container {
+    min-width: 80%;
+  }
 }
 
 .site-sections .section .text-container .section-heading > span {
@@ -322,6 +374,19 @@ main {
   width: 80%;
 }
 
+@media screen and (max-width: 375px) {
+  .services-section .services-details {
+    min-width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .services-section .services-details .service {
   max-width: 33%;
   overflow: hidden;
@@ -336,6 +401,12 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+@media screen and (max-width: 375px) {
+  .services-section .services-details .service {
+    min-width: 70%;
+  }
 }
 
 .services-section .services-details .service .service-img {
@@ -591,9 +662,28 @@ main {
   overflow: hidden;
 }
 
+@media screen and (max-width: 375px) {
+  .product-section .product-list-section .product-list-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+}
+
 .product-section .product-list-section .product-list-container .product-list-item {
   max-width: calc(100% / 3.3);
   overflow: hidden;
+}
+
+@media screen and (max-width: 375px) {
+  .product-section .product-list-section .product-list-container .product-list-item {
+    min-width: 70%;
+  }
 }
 
 .product-section .product-list-section .product-list-container .product-list-item .product-list-img-container {
@@ -687,6 +777,13 @@ main {
           flex-direction: column;
 }
 
+@media screen and (max-width: 375px) {
+  .words-text-section {
+    min-width: 100%;
+    padding: 1em;
+  }
+}
+
 .words-text-section .some-words span {
   font-size: clamp(25px, 3vw, 40px);
   display: inline-block;
@@ -741,6 +838,8 @@ main {
       -ms-flex-align: center;
           align-items: center;
   list-style-type: none;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 2rem;
 }
 
@@ -772,10 +871,27 @@ main {
   border: 1px solid #ffcc70;
 }
 
+@media screen and (max-width: 375px) {
+  .influencer-word-container .influencer-pic-desc {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-width: 100%;
+  }
+}
+
 .influencer-word-container .influencer-pic-desc .influencer-img-container {
   width: 75%;
   overflow: hidden;
   margin-left: 1rem;
+}
+
+@media screen and (max-width: 375px) {
+  .influencer-word-container .influencer-pic-desc .influencer-img-container {
+    min-width: 100%;
+    width: 250px;
+  }
 }
 
 .influencer-word-container .influencer-pic-desc .influencer-img-container img {
@@ -783,8 +899,34 @@ main {
   height: 85%;
 }
 
+@media screen and (max-width: 375px) {
+  .influencer-word-container .influencer-pic-desc .influencer-img-container img {
+    min-width: 100%;
+  }
+}
+
 .influencer-word-container .influencer-pic-desc .influencer-desc {
   width: 70%;
+}
+
+@media screen and (max-width: 375px) {
+  .influencer-word-container .influencer-pic-desc .influencer-desc {
+    min-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    text-align: center;
+  }
 }
 
 .influencer-word-container .influencer-pic-desc .influencer-desc .influencer-desc-heading {
@@ -796,6 +938,12 @@ main {
   margin-bottom: 1rem;
 }
 
+@media screen and (max-width: 375px) {
+  .influencer-word-container .influencer-pic-desc .influencer-desc .influencer-desc-heading {
+    min-width: 300px;
+  }
+}
+
 .influencer-word-container .influencer-pic-desc .influencer-desc .influencer-desc-detail {
   text-align: left;
   letter-spacing: 0.32px;
@@ -804,6 +952,13 @@ main {
   font-size: 16px;
   margin: 1rem 0;
   line-height: 2;
+}
+
+@media screen and (max-width: 375px) {
+  .influencer-word-container .influencer-pic-desc .influencer-desc .influencer-desc-detail {
+    min-width: 300px;
+    padding: 1em;
+  }
 }
 
 .light-heading {
@@ -861,6 +1016,13 @@ main {
   height: 100%;
 }
 
+@media screen and (max-width: 375px) {
+  .technologies-work-with .tech-icons-container .tech-icon img {
+    width: 70%;
+    height: 70%;
+  }
+}
+
 footer {
   width: 100%;
   overflow: hidden;
@@ -915,14 +1077,32 @@ footer .footer-container .footer-site-logo {
           align-items: center;
 }
 
+@media screen and (max-width: 375px) {
+  footer .footer-container .footer-site-logo {
+    width: 100%;
+  }
+}
+
 footer .footer-container .footer-site-logo h2 {
   padding-left: 0.5rem;
+}
+
+@media screen and (max-width: 375px) {
+  footer .footer-container .footer-site-logo h2 {
+    font-size: 80%;
+  }
 }
 
 footer .footer-container .footer-site-logo img {
   width: 10%;
   height: 10%;
   margin-right: 1rem;
+}
+
+@media screen and (max-width: 375px) {
+  footer .footer-container .footer-site-logo img {
+    font-size: 30%;
+  }
 }
 
 footer .footer-container .footer-links {
@@ -937,6 +1117,7 @@ footer .footer-container .footer-links ul {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   list-style-type: none;
+  width: 100%;
 }
 
 footer .footer-container .footer-links ul li {
@@ -949,6 +1130,7 @@ footer .footer-container .footer-links ul li {
 }
 
 footer .footer-container .footer-links ul li a {
+  width: 100%;
   text-align: left;
   letter-spacing: 2.8px;
   color: #fcfcfc;
@@ -956,6 +1138,14 @@ footer .footer-container .footer-links ul li a {
   font-size: 14px;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+@media screen and (max-width: 375px) {
+  footer .footer-container .footer-links ul li a {
+    font-size: 14px;
+    letter-spacing: 1;
+    min-width: 100%;
+  }
 }
 
 .contact-wrapper {
